# tesi_magistrale

./: .gitignore  README.md  TC4x.md  generalità_tc4-ppu.md  ppu.md
MY-TESTS/: comandi.md  comandi.txt  main.c  main.ll  matmul.c  matmul.ll  vec_sum.c  vec_sum.ll
MY-TESTS/dotprod/: Makefile  dotp.c  dotp.h  dotp.ll  dotp.s  main.c  main.ll  main.s
MY-TESTS/matmul/: Makefile  main.c  main.ll  main.s  matmul.c  matmul.h  matmul.ll  matmul.s  vec_sum.c  vec_sum.s
MY-TESTS/polygeist/: comandi.md  matmul.affine.mlir  matmul.c  matmul_static.c  vec_sum.affine.mlir  vec_sum_static.affine.mlir  vec_sum_static.c
MY-TESTS/test_ops/: Makefile  main.c  ppu_basic_vec_ops.ll
MY-TESTS/vector_sum/: Makefile  main.c  main.ll  main.s  vec_sum.c  vec_sum.h  vec_sum.ll  vec_sum.s
MY-TESTS/vekt_vector_sum/: Makefile  commento_assembly_e2e.md  commento_assembly_prodotto.md  v3.ll  v3.s  vec_sum.conversion.ll  vec_sum.e2e.ll  vec_sum.e2e.v2.01.s  vec_sum.e2e.v2.ll  vec_sum.e2e.v2.s  vec_sum.vekt.ll  vectorized_vec_sum.c  vectorized_vec_sum.s  vekt_main.c  vekt_main.ll  vekt_main.s
MY-TESTS/vekt_vector_sum/dump_assembly/: vec_sum.e2e.s  vec_sum.vekt.s  vekt_main.01.s  vekt_main.ll
benchmarks/vector_sum/: Makefile  main.c  vec_sum.c  vec_sum.h  vekt_vec_sum.ll
polygeist/: cond1d.affine.mlir  conv2d.affine.mlir  conv2d.c  dotp.affine.mlir  mat_reduce.affine.mlir  mat_reduce.c  mat_reduce.mlir  matmul.affine.mlir  matmul.c  vec_sum.affine.mlir
transform/: linalg_generalize.mlir  linalg_vectorize_dynamic.matmul.tiled_and_peeled.mlir  linalg_vectorize_dynamic.mlir
vectorizer-tool/: CMakeLists.txt
vectorizer-tool/standalone-opt/: CMakeLists.txt
vekt/: CMakeLists.txt  README.md  comandi.md  setup_llvm20.sh
vekt/include/: CMakeLists.txt
vekt/include/ppu/: CMakeLists.txt  PPUDialect.h  PPUDialect.td  PPUOps.h  PPUOps.td  PPUPasses.h  PPUPasses.td  PPUToLLVMIRTranslation.h
vekt/lib/ppu/: CMakeLists.txt  PPUDialect.cpp  PPUOps.cpp  PPUPasses.cpp  PPUToLLVMIRTranslation.cpp  RaiseAffineToLinalgGeneric.cpp  RaiseAffineToLinalgGenericPass.cpp
vekt/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
vekt/test/vekt/: index_lowering.mlir  matmul.affine.mlir  ppu_vec_sum.mlir  test_per_passo_dummy.mlir  test_translate.mlir  vec_sum.affine.mlir  vec_sum_static.affine.mlir  vector_to_ppu_lowering.mlir
vekt/test/vekt/raising/: conv1d.affine.mlir  conv2d.affine.mlir  dotp.affine.mlir  mat_reduce.affine.mlir  mat_reduce_cols.affine.mlir  mat_reduce_rows.affine.mlir  matmul.affine.mlir  vec_sum.affine.mlir
vekt/test/vekt/vectorization/: vec_sum.linalg.mlir
vekt/vekt-opt/: CMakeLists.txt  vekt-opt.cpp
vekt/vekt-translate/: CMakeLists.txt  vekt-translate.cpp
